# luminengine

./: Cargo.toml  README.md  README_zh-CN.md
builder/rpc/builder/: Cargo.toml  build.rs
builder/rpc/protos/: orderbook.proto
core/: Cargo.toml  README.md  README_zh-CN.md
core/src/: config.rs  core.rs  global.rs  http.rs  lib.rs  main.rs  market.rs  matcher.rs  monitor.rs  order.rs  orderbook.rs  price.rs  target.rs  types.rs
core/src/matchengine/: mod.rs  slfe.rs  tool.rs
core/src/matchengine/slfe/: expired_manager.rs  gtc_manager.rs  iceberg_manager.rs  mod.rs  processor.rs  sharding.rs  status.rs
core/src/matchengine/slfe/manager/: config.rs  event.rs  expired.rs  gtc.rs  iceberg.rs  mod.rs  price.rs  price_change.rs  price_info.rs  status.rs
core/src/matchengine/slfe/processor/: common.rs  day.rs  fok.rs  gtc.rs  iceberg.rs  ioc.rs  limit.rs  market.rs  mod.rs  stop.rs  stoplimit.rs
core/src/matcher/: day.rs  gtc.rs  iceberg.rs  ioc_fok.rs  limit.rs  market.rs  mod.rs  stop.rs  stop_limit.rs
core/src/net/: http.rs  mod.rs  tcp.rs
core/src/net/rpc/: server.rs
core/src/net/rpc/protos/: orderbook.rs
core/src/orderbook/: mod.rs  order.rs
core/src/rpc/: server.rs
core/src/rpc/protos/: orderbook.rs
core/tests/: basic_test.rs  basic_test_1.rs  order_test_1.rs  order_test_2.rs  order_test_3.rs
desktop/: README.md
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml
desktop/src/OrderBookTest/: OrderBookTest.css  index.tsx
manager-desktop/: package-lock.json  package.json
server/: Cargo.toml  README.md
src/: http.rs  lib.rs  matcher.rs  orderbook.rs  rpc.rs  sys.rs  tcp.rs  types.rs
terminal/: Cargo.toml
terminal/src/: main.rs
test-desktop/: package-lock.json  package.json
test-desktop/src/: index.tsx
test-desktop/src-tauri/: tauri.conf.json
test-desktop/src/OrderBookTest/: OrderBookTest.tsx
