[package]
name = "luminengine"
version = "0.2.3"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "A high-performance financial quantitative trading order book matching framework."
keywords = ["finance", "trade", "quantify", "orderbook"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/luminengine/tree/main/core"

[dependencies]
chrono = "0.4.42"
num_cpus = "1.17.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
dashmap = "6.1.0"
crossbeam = "0.8.4"
parking_lot = "0.12.5"
atomic-plus = "0.1.1"
rand = "0.9.2"
crossbeam-channel = "0.5"
priority-queue = "1.3"